feat: people in spaces.
