# swagger/swagger-output.json
@@ -180,6 +180,9 @@
                 "properties": {
                   "name": {
                     "example": "any"
+                  },
+                  "people": {
+                    "example": "any"
                   }
                 }
               }
@@ -189,6 +192,36 @@
       }
     },
     "/spaces/{spaceId}": {
+      "get": {
+        "summary": "Get a specific space which the user created or added to.",
+        "description": "",
+        "parameters": [
+          {
+            "name": "spaceId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      },
       "delete": {
         "summary": "Delete a space.",
         "description": "",
@@ -223,6 +256,85 @@
         ]
       }
     },
+    "/spaces/{spaceId}/users": {
+      "get": {
+        "summary": "Get all the users in a space.",
+        "description": "",
+        "parameters": [
+          {
+            "name": "spaceId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      },
+      "post": {
+        "summary": "Add collegues to a space.",
+        "description": "",
+        "parameters": [
+          {
+            "name": "spaceId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "people": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/spaces/{spaceId}/notes": {
       "get": {
         "summary": "Get all the notes in a space.",
@@ -255,21 +367,13 @@
         ]
       }
     },
-    "/spaces/{spaceId}/users/{userId}": {
-      "post": {
-        "summary": "Add a collegue to a space.",
+    "/spaces/{spaceId}/users/": {
+      "delete": {
+        "summary": "Delete a collegue from the space.",
         "description": "",
         "parameters": [
           {
             "name": "spaceId",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "userId",
             "in": "path",
             "required": true,
             "schema": {
@@ -295,22 +399,30 @@
           {
             "bearerAuth": []
           }
-        ]
-      },
-      "delete": {
-        "summary": "Delete a collegue from the space.",
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "people": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/spaces/{spaceId}/bookmarks": {
+      "post": {
+        "summary": "Create a bookmark in the space.",
         "description": "",
         "parameters": [
           {
             "name": "spaceId",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "userId",
             "in": "path",
             "required": true,
             "schema": {
@@ -322,8 +434,49 @@
           "200": {
             "description": "OK"
           },
-          "400": {
-            "description": "Bad Request"
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "document": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "get": {
+        "summary": "Get all the bookmarks in a space.",
+        "description": "",
+        "parameters": [
+          {
+            "name": "spaceId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
           "401": {
             "description": "Unauthorized"
@@ -339,13 +492,21 @@
         ]
       }
     },
-    "/spaces/{spaceId}/bookmarks": {
-      "get": {
-        "summary": "Get all the bookmarks in a space.",
+    "/spaces/{spaceId}/bookmarks/{bookmarkId}": {
+      "delete": {
+        "summary": "Delete a bookmark from the space.",
         "description": "",
         "parameters": [
           {
             "name": "spaceId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "bookmarkId",
             "in": "path",
             "required": true,
             "schema": {
